--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,3 @@
-/* styles.css (or your global stylesheet) */
-
 body,
 html {
   height: 100%;
@@ -10,19 +8,19 @@ html {
 .app-container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Make sure the container takes at least the full viewport height */
+  min-height: 100vh;
 }
 
 app-header {
-  flex: 0 0 auto; /* Header does not grow or shrink, maintains its height */
+  flex: 0 0 auto;
 }
 
 app-main {
-  flex: 1; /* Main content grows to fill remaining space */
-  padding: 20px; /* Add padding as needed */
+  flex: 1;
+  padding: 20px;
 }
 
 app-footer {
-  flex: 0 0 auto; /* Footer does not grow or shrink, maintains its height */
-  margin-top: auto; /* Push the footer to the bottom */
+  flex: 0 0 auto;
+  margin-top: auto;
 }
