--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,62 +1,36 @@
 <div class="main-container">
+  <h2>Categories</h2>
+  <button mat-raised-button (click)="createNewCategory()">New Category</button>
 
-  <h2 class="header">Categories</h2>
-
-
-  <mat-table [dataSource]="categories" class="mat-elevation-z8 table">
-
+  <table mat-table [dataSource]="categories" class="mat-elevation-z8">
     <ng-container matColumnDef="name">
-      <mat-header-cell class="header-cell" *matHeaderCellDef>
-        Category Name
-      </mat-header-cell>
-      <mat-cell class="cell" *matCellDef="let category">
-        {{ category.name }}
-      </mat-cell>
+      <th mat-header-cell *matHeaderCellDef>Category Name</th>
+      <td mat-cell *matCellDef="let category">{{ category.name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="wordCount">
-      <mat-header-cell class="header-cell" *matHeaderCellDef>
-        No. of Words
-      </mat-header-cell>
-      <mat-cell class="cell" *matCellDef="let category">
-        {{ category.words.size }}
-      </mat-cell>
+      <th mat-header-cell *matHeaderCellDef>No. of Words</th>
+      <td mat-cell *matCellDef="let category">{{ category.words.length }}</td>
     </ng-container>
 
     <ng-container matColumnDef="lastEditDate">
-      <mat-header-cell class="header-cell" *matHeaderCellDef>
-        Last Edit Date
-      </mat-header-cell>
-      <mat-cell class="cell" *matCellDef="let category">
-        {{ category.updated_at | date : "medium" }}
-      </mat-cell>
+      <th mat-header-cell *matHeaderCellDef>Last Edit Date</th>
+      <td mat-cell *matCellDef="let category">{{ category.lastEditDate | date:'mediumDate' }}</td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <mat-header-cell class="header-cell" *matHeaderCellDef>
-        Actions
-      </mat-header-cell>
-      <mat-cell class="cell" *matCellDef="let category">
-
-        <button mat-icon-button (click)="editCategory(category)">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let category">
+        <button mat-icon-button (click)="editCategory(category.id)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button (click)="deleteCategory(category)">
+        <button mat-icon-button (click)="deleteCategory(category.id)">
           <mat-icon>delete</mat-icon>
         </button>
-      </mat-cell>
+      </td>
     </ng-container>
 
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-  </mat-table>
-
-  <button
-    mat-raised-button
-    color="primary"
-    class="new-category-button"
-    (click)="createNewCategory()"
-  >
-    New Category
-  </button>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
